--- a/gb/19/9/24/n11542533.md
+++ b/gb/19/9/24/n11542533.md
@@ -1,66 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÂòÅä¼þ×é×°¹íÇ¹£¿¼ì²ì³¤»áËßËÏ</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/09/20fae3589b7d213a45766760a797ac12-600x400.jpeg" />
-<h6>»ñÈ¡ÐòÁÐºÅÐèÒª½øÐÐ±³¾°¼ì²é£¬ÐòÁÐºÅ±ØÐë¿ÌÔÚ½ÓÊÕÆ÷ÉÏ¡£ (¼ì²ì³¤°ì¹«ÊÒSource: Fusion)
-</h6>
-<hr>
-<p>¡¾´ó¼ÍÔª2019Äê09ÔÂ24ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕß²ÌÈÜÅ¦Ô¼±¨µ¼£©¹ºÂòÎÞ·¨×·×ÙµÄ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md">Ç¹Ö§</a>£¬¾ÍÏñ×ÔÖÆµÄÇ¹£¬ÕâÍ¨³£±»³ÆÎª¡°¹íÇ¹¡±»ò¡°ÓÄÁéÇ¹¡±¡£¹íÇ¹µÄÊÐ³¡ÕýÔÚÅî²ª·¢Õ¹£¬Ò²·Å´óÁËÇ¹Ö§±©Á¦µÄÍþÐ²¡£Å¦Ô¼ÖÝ×Ü¼ì²ì×Ü³¤Õ²ÀÖÏ¼23ÈÕÐû²¼£¬½ûÖ¹16¼ÒÖÆÔìºÍ/»òÏúÊÛÇ¹Ö§Áã¼þµÄÍøÕ¾¾­ÓªÕßÏòÅ¦Ô¼ÖÝ³öÊÛ½üºõÍêÕûµÄ¹¥»÷ÎäÆ÷¡£</p>
-<figure id="11542536" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2019/09/9198c281870a730f096f705569abc6fd-450x222.png" alt="Î´Íê³ÉµÄ½ÓÊÕÆ÷Óë¿ÉÒÔÍêÈ«Ê¹ÓÃµÄ½ÓÊÕÆ÷¶Ô±È¡£" width="500" /><figcaption class="wp-caption-text">Î´Íê³ÉµÄ½ÓÊÕÆ÷Óë¿ÉÒÔÍêÈ«Ê¹ÓÃµÄ½ÓÊÕÆ÷¶Ô±È¡££¨¼ì²ì³¤°ì¹«ÊÒSource: Fusion£©</figcaption></figure>
-<p>ÔÚÅ¦Ô¼£¬ÓµÓÐ¡¢ÖÆÔìºÍÏúÊÛ¹¥»÷ÎäÆ÷ÊÇ·Ç·¨µÄ£¬µ«ÊÇÕâÐ©¹«Ë¾Ò»Ö±ÔÚÌá¹©Î¥·´½ûÁîµÄÊÖ¶Î¡ª¡ªÖÆÔìÎÞ±ê¼ÇºÍ·ÇÊÐ³¡»¯µÄ×ÔÖÆÎäÆ÷£¬½«²¿·Ö×°ÅäºÃµÄÇ¹Ðµ°üÔËËÍ¸øÂò¼Ò£¬ÈÃÂò¼ÒÔÚ¼ÒÖÐÓÃ¹ºÂòµÄ²¿¼þ×é×°£¬À´±ÜÃâ±³¾°µ÷²é¡£</p>
-<p>ÕâÈÃÈËÏëÆð2018ÄêÒòÑïÑÔµ½Ñ§Ð£¿ªÇ¹¶ø±»²¶µÄÌ¨Íå½»»»Ñ§ÉúËï°²×ô£¬Ëû±»²é»ñÓµÓÐÒ»°ÑÊÖÇ¹ºÍ1,600·¢ÒÔÉÏ×Óµ¯¡£ÆðËßÊéÏÔÊ¾£¬ÕâÃû³ÁÃÔ¾üÊÂÓÃÆ·µÄ18ËêÑ§Éú£¬¾¹È»Í¸¹ýÔÚÍøÉÏ¹ºÂòÁã¼þ£¬×ÔÐÐ×é×°ÁËÒ»°Ñ9ÀåÃ×ÊÖÇ¹¡£</p>
-<p>Õý³£Çé¿öÏÂ£¬µ±Äã´Ó³ÖÅÆÇ¹ÐµÏúÊÛÉÌ´¦¹ºÂòÊ±£¬Ç¹ÉÏ»á´øÓÐÐòÁÐºÅ¡£»ñÈ¡ÐòÁÐºÅÐèÒª½øÐÐ±³¾°¼ì²é£¬ÐòÁÐºÅ±ØÐë¿ÌÔÚ½ÓÊÕÆ÷ÉÏ£¬Ò»µ©ÖÆÔìÁË»ðÆ÷£¬Ç¹µÄÖ÷ÈË¾ÍÒª°ÑËüµÇ¼ÇÁË¡£</p>
-<p>»»¾ä»°Ëµ£¬<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md">Ç¹Ö§</a>ÖÆÔìÕß³ý·ÇÉêÇëÐòÁÐºÅ£¬·ñÔò¾Í²»ÄÜÍê³É½ÓÊÕÆ÷µÄÖÆÔì¡£Õ²ÀÖÏ¼Ëµ£¬ÎªÁË¹æ±ÜÁª°î·¨¹æ£¬ÕâÐ©Âô¼ÒÒ»Ö±ÒÔ²»ÍêÕûµÄ½ÓÊÕÆ÷¡°80%¡±ÖÆÇ¹£¬ÀýÈçÈ±ÉÙÄ³Ð©¿×¡¢ÏÁ²Û»ò¿ÕÇ»£¬ÕâÑù¾Í²»±»ÊÓÎªÇ¹Ö§¡£</p>
-<p>È»¶øÂò¼ÒÍø¹ºÖ®ºó£¬Ö»ÐèÓÃÒ»Ì¨ÆÕÍ¨µÄ×ê´²½øÐÐÒ»Ð©Ð¡µÄ¸Ä¶¯£¬¾Í¿ÉÒÔ½«Î´Íê³ÉµÄ½ÓÊÕÆ÷×ª±ä³É¿ÉÒÔÍêÈ«Ê¹ÓÃµÄ½ÓÊÕÆ÷¡£ÕâÖÖÈ±·¦ÐòÁÐºÅµÄ½ÓÊÕÆ÷£¬¿ÉÒÔºÜÈÝÒ×µØ±»¿Ö²À·Ö×Ó£¬ÌÓ·¸ºÍÖØ×ï·¸×é×°³É·Ç·¨µÄ¹¥»÷ÎäÆ÷¡£</p>
-<p>×Ü¼ì²ì³¤°ì¹«ÊÒÏÖÏò16¼Ò¹«Ë¾·¢³öÖÕÖ¹/×èÖ¹Áî£¬ÒÔ×èÖ¹ÍøÉÏÏúÊÛ¡°¹íÇ¹¡±µ½Å¦Ô¼ÖÝ£¬ÒªÇóËûÃÇÔÚÍøÕ¾ÉÏ¾¯¸æÏû·ÑÕß¸ÃÀàÏúÊÛÔÚÅ¦Ô¼ÖÝÖÆÔì»ò×é×°¹¥»÷ÎäÆ÷ÊÇ·Ç·¨µÄ£¬Æäºó¹ûÊÇÇ¹Ö§Ïú»Ù¡¢Ã¿´ÎÎ¥¹æ×î¸ß·£¿î5Ç§ÃÀÔª¡£</p>
-<p>¹ýÈ¥£¬Å¦Ô¼ÖÝ×Ü¼ì²ì³¤°ì¹«ÊÒÒ»Ö±Å¬Á¦×èÖ¹Å¦Ô¼½ÖÍ·¡°¹íÇ¹¡±µÄÀ©É¢¡£2015Äê9ÔÂ£¬¸Ã°ì¹«ÊÒÔÚ¡°ÓÄÁéÐÐ¶¯¡±ÖÐÌáÆð32ÏîÆðËß£¬ÕâÊÇÅ¦Ô¼ÖÝÖ´·¨»ú¹¹Ê×´ÎÒÔ¡°×é×°ºÍ³öÊÛ¹íÇ¹¡±µÄ×ïÃûÆðËß¸öÈË¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£º¼ÒÈð</p>
-<hr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vhizyf3565/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/vhizyf3565/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vhizyf3565/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vhizyf3565/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/vhizyf3565/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/vhizyf3565/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/vhizyf3565/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¹°é…ä»¶ç»„è£…é¬¼æžªï¼Ÿæ£€å¯Ÿé•¿ä¼šè¯‰è®¼</h2>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/9/24/n11542533.htm">ÂòÅä¼þ×é×°¹íÇ¹£¿¼ì²ì³¤»áËßËÏ</a>
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/1/30/n11011971.htm">¼ÓÇ¿Ç¹Ö§¹ÜÖÆ Å¦Ô¼ÖÝ³¤ÊÄÑÔ°ÙÈÕÍ¨¹ýÁ¢·¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/12/n10296377.htm">Å¦Ô¼ÖÝÇ¹Ö§¸´Éó 1/5ÈËÉÐÎ´Ö´ÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/2/3/n10111201.htm">×ßË½Ç¹Ö§ÈëÅ¦Ô¼ 911´óÏÃ±£°²±»²¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/2/11/n4637987.htm">Å¦Ô¼»ªÄÐ±»²¶ ¼Ò²Ø4Íò·¢×Óµ¯ºÍÇ¹Ö§Õ¨Ò©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/6/14/n4457315.htm">Å¦Ô¼»ª¶ûµÀ·ò·¹µêÇ¹Ö§×ß»ð 4ÈËÊÜÉË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/13/5/30/n3882409.htm">ÒÉÒòÍÆ¶¯Ç¹Ö§¹ÜÖÆ Å¦Ô¼ÊÐ³¤ÊÕµ½±ÍÂé¶¾ÐÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/13/1/17/n3778742.htm">Å¦Ô¼Ç¹¹Ü  Ç¹Ö§ÏúÊÛ²»Àä·´ÈÈ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777369.htm">ÑÏ¹ÜÇ¹Ö§ Å¦Ô¼ÖÝÇÀÏÈÂõ´ó²½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/13/1/10/n3773016.htm">Å¦Ô¼ÖÝ³¤£ºÑÏ¸ñ¹ÜÖÆÇ¹Ö§</a></li>
+<h6></h6>
+<hr>
+<p>ã€å¤§çºªå…ƒ2019å¹´09æœˆ24æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…è”¡æº¶çº½çº¦æŠ¥å¯¼ï¼‰è´­ä¹°æ— æ³•è¿½è¸ªçš„<ahref="https://github.com/vhizyf3565/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">æžªæ”¯</a>ï¼Œå°±åƒè‡ªåˆ¶çš„æžªï¼Œè¿™é€šå¸¸è¢«ç§°ä¸ºâ€œé¬¼æžªâ€æˆ–â€œå¹½çµæžªâ€ã€‚é¬¼æžªçš„å¸‚åœºæ­£åœ¨è“¬å‹ƒå‘å±•ï¼Œä¹Ÿæ”¾å¤§äº†æžªæ”¯æš´åŠ›çš„å¨èƒã€‚çº½çº¦å·žæ€»æ£€å¯Ÿæ€»é•¿è©¹ä¹éœž23æ—¥å®£å¸ƒï¼Œç¦æ­¢16å®¶åˆ¶é€ å’Œ/æˆ–é”€å”®æžªæ”¯é›¶ä»¶çš„ç½‘ç«™ç»è¥è€…å‘çº½çº¦å·žå‡ºå”®è¿‘ä¹Žå®Œæ•´çš„æ”»å‡»æ­¦å™¨ã€‚</p>
+<figure id="11542536" aria-describedby="caption-11542536" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/09/9198c281870a730f096f705569abc6fd-450x222.png" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/09/9198c281870a730f096f705569abc6fd-450x222.png" alt="æœªå®Œæˆçš„æŽ¥æ”¶å™¨ä¸Žå¯ä»¥å®Œå…¨ä½¿ç”¨çš„æŽ¥æ”¶å™¨å¯¹æ¯”ã€‚" width="500" /></a><figcaption id="caption-11542536" class="wp-caption-text">æœªå®Œæˆçš„æŽ¥æ”¶å™¨ä¸Žå¯ä»¥å®Œå…¨ä½¿ç”¨çš„æŽ¥æ”¶å™¨å¯¹æ¯”ã€‚ï¼ˆæ£€å¯Ÿé•¿åŠžå…¬å®¤Source: Fusionï¼‰</figcaption></figure>
+<p>åœ¨çº½çº¦ï¼Œæ‹¥æœ‰ã€åˆ¶é€ å’Œé”€å”®æ”»å‡»æ­¦å™¨æ˜¯éžæ³•çš„ï¼Œä½†æ˜¯è¿™äº›å…¬å¸ä¸€ç›´åœ¨æä¾›è¿åç¦ä»¤çš„æ‰‹æ®µâ€”â€”åˆ¶é€ æ— æ ‡è®°å’Œéžå¸‚åœºåŒ–çš„è‡ªåˆ¶æ­¦å™¨ï¼Œå°†éƒ¨åˆ†è£…é…å¥½çš„æžªæ¢°åŒ…è¿é€ç»™ä¹°å®¶ï¼Œè®©ä¹°å®¶åœ¨å®¶ä¸­ç”¨è´­ä¹°çš„éƒ¨ä»¶ç»„è£…ï¼Œæ¥é¿å…èƒŒæ™¯è°ƒæŸ¥ã€‚</p>
+<p>è¿™è®©äººæƒ³èµ·2018å¹´å› æ‰¬è¨€åˆ°å­¦æ ¡å¼€æžªè€Œè¢«æ•çš„å°æ¹¾äº¤æ¢å­¦ç”Ÿå­™å®‰ä½ï¼Œä»–è¢«æŸ¥èŽ·æ‹¥æœ‰ä¸€æŠŠæ‰‹æžªå’Œ1,600å‘ä»¥ä¸Šå­å¼¹ã€‚èµ·è¯‰ä¹¦æ˜¾ç¤ºï¼Œè¿™åæ²‰è¿·å†›äº‹ç”¨å“çš„18å²å­¦ç”Ÿï¼Œç«Ÿç„¶é€è¿‡åœ¨ç½‘ä¸Šè´­ä¹°é›¶ä»¶ï¼Œè‡ªè¡Œç»„è£…äº†ä¸€æŠŠ9åŽ˜ç±³æ‰‹æžªã€‚</p>
+<p>æ­£å¸¸æƒ…å†µä¸‹ï¼Œå½“ä½ ä»ŽæŒç‰Œæžªæ¢°é”€å”®å•†å¤„è´­ä¹°æ—¶ï¼Œæžªä¸Šä¼šå¸¦æœ‰åºåˆ—å·ã€‚èŽ·å–åºåˆ—å·éœ€è¦è¿›è¡ŒèƒŒæ™¯æ£€æŸ¥ï¼Œåºåˆ—å·å¿…é¡»åˆ»åœ¨æŽ¥æ”¶å™¨ä¸Šï¼Œä¸€æ—¦åˆ¶é€ äº†ç«å™¨ï¼Œæžªçš„ä¸»äººå°±è¦æŠŠå®ƒç™»è®°äº†ã€‚</p>
+<p>æ¢å¥è¯è¯´ï¼Œ<ahref="https://github.com/vhizyf3565/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">æžªæ”¯</a>åˆ¶é€ è€…é™¤éžç”³è¯·åºåˆ—å·ï¼Œå¦åˆ™å°±ä¸èƒ½å®ŒæˆæŽ¥æ”¶å™¨çš„åˆ¶é€ ã€‚è©¹ä¹éœžè¯´ï¼Œä¸ºäº†è§„é¿è”é‚¦æ³•è§„ï¼Œè¿™äº›å–å®¶ä¸€ç›´ä»¥ä¸å®Œæ•´çš„æŽ¥æ”¶å™¨â€œ80%â€åˆ¶æžªï¼Œä¾‹å¦‚ç¼ºå°‘æŸäº›å­”ã€ç‹­æ§½æˆ–ç©ºè…”ï¼Œè¿™æ ·å°±ä¸è¢«è§†ä¸ºæžªæ”¯ã€‚</p>
+<p>ç„¶è€Œä¹°å®¶ç½‘è´­ä¹‹åŽï¼Œåªéœ€ç”¨ä¸€å°æ™®é€šçš„é’»åºŠè¿›è¡Œä¸€äº›å°çš„æ”¹åŠ¨ï¼Œå°±å¯ä»¥å°†æœªå®Œæˆçš„æŽ¥æ”¶å™¨è½¬å˜æˆå¯ä»¥å®Œå…¨ä½¿ç”¨çš„æŽ¥æ”¶å™¨ã€‚è¿™ç§ç¼ºä¹åºåˆ—å·çš„æŽ¥æ”¶å™¨ï¼Œå¯ä»¥å¾ˆå®¹æ˜“åœ°è¢«ææ€–åˆ†å­ï¼Œé€ƒçŠ¯å’Œé‡ç½ªçŠ¯ç»„è£…æˆéžæ³•çš„æ”»å‡»æ­¦å™¨ã€‚</p>
+<p>æ€»æ£€å¯Ÿé•¿åŠžå…¬å®¤çŽ°å‘16å®¶å…¬å¸å‘å‡ºç»ˆæ­¢/é˜»æ­¢ä»¤ï¼Œä»¥é˜»æ­¢ç½‘ä¸Šé”€å”®â€œé¬¼æžªâ€åˆ°çº½çº¦å·žï¼Œè¦æ±‚ä»–ä»¬åœ¨ç½‘ç«™ä¸Šè­¦å‘Šæ¶ˆè´¹è€…è¯¥ç±»é”€å”®åœ¨çº½çº¦å·žåˆ¶é€ æˆ–ç»„è£…æ”»å‡»æ­¦å™¨æ˜¯éžæ³•çš„ï¼Œå…¶åŽæžœæ˜¯æžªæ”¯é”€æ¯ã€æ¯æ¬¡è¿è§„æœ€é«˜ç½šæ¬¾5åƒç¾Žå…ƒã€‚</p>
+<p>è¿‡åŽ»ï¼Œçº½çº¦å·žæ€»æ£€å¯Ÿé•¿åŠžå…¬å®¤ä¸€ç›´åŠªåŠ›é˜»æ­¢çº½çº¦è¡—å¤´â€œé¬¼æžªâ€çš„æ‰©æ•£ã€‚2015å¹´9æœˆï¼Œè¯¥åŠžå…¬å®¤åœ¨â€œå¹½çµè¡ŒåŠ¨â€ä¸­æèµ·32é¡¹èµ·è¯‰ï¼Œè¿™æ˜¯çº½çº¦å·žæ‰§æ³•æœºæž„é¦–æ¬¡ä»¥â€œç»„è£…å’Œå‡ºå”®é¬¼æžªâ€çš„ç½ªåèµ·è¯‰ä¸ªäººã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå®¶ç‘ž</p>
 
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11542425.htm">Ê®Ò»ÆÚ¼äÔÚ±±¾©Èç²Þ²ÉÊµÃûÖÆ ÃñÖÚÌ¢·¥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11542073.htm">ÎªºÎÖÐ·½´ú±íÍÅÈ¡Ïû·ÃÎÊÅ©ÒµÖÝ Ä·ÇÕ¸ø´ð°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11542192.htm">¡¾·­Ç½±Ø¿´¡¿9.21ÍíÍú½Ç¼¸¸ö¹îÒì¾µÍ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11541997.htm">Ä·ÇÕ£ºÁõº×Á½ÖÜÄÚ½«¸°ÃÀÃ³Ò×Ì¸ÅÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/10/14/n8397724.htm">¡¾ÎÄÊ·¡¿Ìì°²ÃÅ×Ï½û³Ç  ÎÝ¼¹²Ø±¦Ï»ÓÐËµµÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/18/n11530381.htm">ÉñÏÉ¾Û»áÉ½ÉñÃí ³£É½ÈËÎÞÒâÎÅÌì»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/12/4/16/n3566971.htm">ÐÅÈçÎ²Éú£ºµÚÒ»¸ö°®Çé±¯¾ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/31/n11490747.htm">ÍõÑôÃ÷ÆæÃÎ ¡°¿´¼û¡±Ò»Ç§¶àÄêÇ°µÄ¶÷Ô¹ÊÇ·Ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11542210.htm">°Ù±ä½ð¸ÕÈÎÄãÍæ£º¶¨ÖÆ»õ³µ·¿³µÉÌÎñ³µ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11542500.htm">Âý¶¯×÷»­Ãæ£º½üÅÄ´ó»Æ·ä·ÉÐÐÓëºÈË®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/20/n11535463.htm">Ê³Îï·¢Ñ¿ÄÜ³ÔÂð£¿ÓÐµÄÓÐ¶¾ ÓÐµÄ¸üÓªÑø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11543773.htm">´ó·¿»»Ð¡·¿ ¾ÉÎïÇåÀíÅÄÂôÓÐ·½ ÇáËÉ°á¼Ò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11543782.htm">Èý´úÀÏµêÆ®ÏãÒ»¼××Ó¡ª¡ªÃ×Ì¦Ä¿¡¢ÉÕÕ¨¼@</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11541603.htm">¡¾ÐÂÎÅ¿´µã¡¿Õæ¼Ù¼ÇÕß£¿¸¶¹úºÀ»ñ½±10ÍòÔÙÈÇÒÉ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/20/n11535692.htm">¡¾ÐÂÎÅ¿´µã¡¿ÉîÏÝËÄ´óÎ£»ú ÃÀÖÐÌ¸ÅÐ±±¾©¶à±ä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11544091.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÏ´÷½ÅÁÍÏÖÉí ÈÎÕý·Ç³Æ¾´ÑöÃÀ¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539358.htm">ÏòÈø¶ûÍß¶à´óÈöÇ® ÖÐ¹²°µÖÐ½»Ò×ÄÚÄ»ÆØ¹â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11540476.htm">±¨¸æ£ºÁÚ¹úÓëÃÀ¹úÖÆºâ ÖÐ¹²ÄÑÒÔÎäÍ³Ì¨Íå</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539403.htm">ÃÏÍíÖÛ°¸¾ªÐÑ¼Ó¹ú ¸úÖÐ¹²½Ó´¥Õþ²ß³¹µ×Ê§°Ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11540650.htm">¸è×ÐÏ·ÈË²Å¶Ï²ã Ì¸¸Ê¿à ÑîÀö»¨ÀáÓµ³ÂÑÇÀ¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539083.htm">ÔâÎåÃ«ÔìÒ¥ÌÓÍö±±ÃÀ ¸Û¸èÊÖ»ÆÒ«Ã÷IG±íÐÄÉù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11542872.htm">ÈÃÏ·ÃÔ¿´µÃ¹» ÑîÀö»¨¸è×ÐÏ·½ñÊ×²¥Á¬²¥Á½¼¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539367.htm">·¶±ù±ù×ÔÅÄÓ°Æ¬£º¾­ÀúÁËÏë²»µ½µÄÀ§ÄÑÓëÍ´¿à</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539304.htm">ÎªºÎ×Ü°®×Ôµ¼×ÔÑÝ£¿Ðìá¿µÄ´ð°¸Ð¦·­ÖÚÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/10/14/n8397724.htm">¡¾ÎÄÊ·¡¿Ìì°²ÃÅ×Ï½û³Ç  ÎÝ¼¹²Ø±¦Ï»ÓÐËµµÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/18/n11530381.htm">ÉñÏÉ¾Û»áÉ½ÉñÃí ³£É½ÈËÎÞÒâÎÅÌì»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/12/4/16/n3566971.htm">ÐÅÈçÎ²Éú£ºµÚÒ»¸ö°®Çé±¯¾ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/13/n11519193.htm">¸ÛÈËÕùÃñÖ÷ »ÆÖ®·æÅÎÖÐ¹úÈËÒ²ÏíÓÐÃñÖ÷×ÔÓÉ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/31/n11490747.htm">ÍõÑôÃ÷ÆæÃÎ ¡°¿´¼û¡±Ò»Ç§¶àÄêÇ°µÄ¶÷Ô¹ÊÇ·Ç</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/9/24/n11542533.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/13/1/10/n3773016.md#1">çº½çº¦å·žé•¿ï¼šä¸¥æ ¼ç®¡åˆ¶æžªæ”¯</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/13/1/15/n3777369.md#1">ä¸¥ç®¡æžªæ”¯ çº½çº¦å·žæŠ¢å…ˆè¿ˆå¤§æ­¥</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/13/1/17/n3778742.md#1">çº½çº¦æžªç®¡  æžªæ”¯é”€å”®ä¸å†·åçƒ­</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/13/5/30/n3882409.md#1">ç–‘å› æŽ¨åŠ¨æžªæ”¯ç®¡åˆ¶ çº½çº¦å¸‚é•¿æ”¶åˆ°è“–éº»æ¯’ä¿¡</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/15/6/14/n4457315.md#1">çº½çº¦åŽå°”é“å¤«é¥­åº—æžªæ”¯èµ°ç« 4äººå—ä¼¤</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/16/2/11/n4637987.md#1">çº½çº¦åŽç”·è¢«æ• å®¶è—4ä¸‡å‘å­å¼¹å’Œæžªæ”¯ç‚¸è¯</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/18/2/3/n10111201.md#1">èµ°ç§æžªæ”¯å…¥çº½çº¦ 911å¤§åŽ¦ä¿å®‰è¢«æ•</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/18/4/12/n10296377.md#1">çº½çº¦å·žæžªæ”¯å¤å®¡ 1/5äººå°šæœªæ‰§è¡Œ</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/19/1/30/n11011971.md#1">åŠ å¼ºæžªæ”¯ç®¡åˆ¶ çº½çº¦å·žé•¿èª“è¨€ç™¾æ—¥é€šè¿‡ç«‹æ³•</a></li>
+<li><a href="https://github.com/vhizyf3565/djy/blob/master/gb/22/1/26/n13529900.md#1">å£ç½©ä»¤å¦‚åè¿‡å±±è½¦ å«åœåŽ ä¸Šè¯‰åº­æš‚æ¢å¤</a></li>
+<hr>
+
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308535.md#1" target="_blank">é‡‘é›ï¼šâ€œæ—¢å¾—åˆ©ç›Šè€…â€ä½•ä»¥æˆä¸ºåå¯¹è‹ç»´åŸƒçš„å…ˆé”‹?</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">å‰å¤§é™†å…¬å®‰ï¼šä¸­å…±é•‡åŽ‹æ³•è½®åŠŸæ—©æœ‰é¢„è°‹</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11967780.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å·ä¹ å¯¹è¯è¯´å•¥ çº¢äºŒä»£å€’æˆˆä¹ å±æ€¥ï¼Ÿ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/24/n11968465.md#1">ã€æ‹æ¡ˆæƒŠå¥‡ã€‘ä¹ è¿‘å¹³æœ‰é™©ï¼Ÿä¸‰å³¡å¤§åè¢«çˆ†å±æœº</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11968139.md#1">é©¬åˆ—æ•™æŽˆåƒé‡Œæ•£æ¯’ï¼Ÿæ„é¦–ä¾‹ç¡®è¯Šç—…ä¾‹èº«ä»½æ›å…‰</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11965551.md#1">åˆ†æžï¼šå¤§ç–«ä¹‹ä¸‹ä¸­å›½ä¸¤åƒä¸‡æ‰‹æœºç”¨æˆ·æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11964881.md#1">æ­¦æ±‰ç—…ä¾‹æ¸…é›¶å†…å¹•è¢«æ›å…‰ åŒ—äº¬é€šçŸ¥éœ²ç«¯å€ª</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11965271.md#1">åˆ˜çœŸæƒŠä¼ ç—…é€ ç•™ä¸‹4å²å¥³å„¿ äº«å¹´44å²ã€€</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11963031.md#1">èƒžå¼Ÿæˆä¸ºå°æ¹¾å¥³å©¿ ç‘žèŽŽæ›å©šç¤¼ç…§å–Šå¼€å¿ƒ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11966011.md#1">åˆ˜çœŸ44å²è¾žä¸– æ¼”è‰ºåœˆå¥½å‹ä¸èˆ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11964501.md#1">æ¹–åŒ—ç—…ä¾‹é›¶å¢žé•¿ï¼Ÿå°æ¹¾ç½‘çº¢:ä¸­å…±è°Žè¨€å®³æƒ¨ä¸–ç•Œ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/21/n11962008.md#1">å¥½èŽ±åžåˆ¶ä½œäººç“¦ç‰¹æŸ“ç–«ï¼šèº«ä½“åƒè¢«å·´å£«æ’žåˆ°</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/11/n11933384.md#1">æ–­è‡‚åƒ§è½¬ä¸–ï¼Ÿå°è›®ç«¥æœ‰èƒ† å‘åº·ç†™å¸è¦å®˜èŒ</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11964127.md#1">åŽæ‚”æˆ–æ˜¯ä¸€å‘³è‰¯è¯ ä½†é¡»åœ¨å¤§é™å‰</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 å¦æžæ³°æ¥</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/21/n11961878.md#1">ã€åŽ†å²å›žçœ¸ã€‘äººä»¬å¿˜è®°ç¥ž è¿™å°±æ˜¯ä¸€åˆ‡çš„èµ·å› </a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/2/27/n11900217.md#1">ã€åŽ†å²ä¸Šçš„ç˜Ÿç–«ã€‘â€œä¸Šå¸ä¹‹éž­â€ï¼šæ¬§æ´²é»‘æ­»ç—…</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/vhizyf3565/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/vhizyf3565/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/9/24/n11542533.htm">ä¹°é…ä»¶ç»„è£…é¬¼æžªï¼Ÿæ£€å¯Ÿé•¿ä¼šè¯‰è®¼</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vhizyf3565/djy/blob/master/gb/19/9/24/n11542533.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/vhizyf3565/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/vhizyf3565/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/vhizyf3565/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/vhizyf3565/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vhizyf3565/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
